Bulk changes for Java 12